tests/errors/pp-elseif-after-else.h
#if 0
#else
#elseif 0
#endif
